--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -84,14 +84,14 @@
                         "<div class='hidden'>" + r.msg[i].city + "</div>" +
                         "<div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[i].img + "'>" +
                         "</div>" +
-                        "<div class='col-lg-5 col-lg-offset-1 contact'style='padding-left: 50px;margin-top: 30px'><p><span>T：</span>" + r.msg[i].tel + "</p><p><span>F：</span>" + r.msg[i].fax + "</p><p><span>E：</span>" + r.msg[i].email + "</p><p><span>A：</span>" + r.msg[i].add + "</p>" +
+                        "<div class='col-lg-5 col-lg-offset-1 contact'style='padding-left: 50px;margin-top: 30px'><p><span>T：</span>" + r.msg[i].tel + "</p><p><span>F：</span>" + r.msg[i].fax + "</p><p><span>E：</span>" + r.msg[i].email + "</p><p><p style='float: left;color: #9b761d;'>A：</p><p style='float: left;width: 70%;word-break: break-all;word-wrap: break-word;'>" + r.msg[i].add + "</p></p>" +
                         "</div>" +
                         "</div>");
                     }
                     $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
                     $('#city_one').append("<div class='row'><div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[0].img + "'>" +
                     "</div>" +
-                    "<div class='col-lg-5 col-lg-offset-1 contact' style='padding-left: 50px;margin-top: 30px;'><p><span>T：</span>" + r.msg[0].tel + "</p><p><span>F：</span>" + r.msg[0].fax + "</p><p><span>E：</span>" + r.msg[0].email + "</p><p><span>A：</span>" + r.msg[0].add + "</p>" +
+                    "<div class='col-lg-5 col-lg-offset-1 contact' style='padding-left: 50px;margin-top: 30px;'><p><span>T：</span>" + r.msg[0].tel + "</p><p><span>F：</span>" + r.msg[0].fax + "</p><p><span>E：</span>" + r.msg[0].email + "</p><p><p style='float: left;color: #9b761d;'>A：</p><p style='float: left;width: 70%;word-break: break-all;word-wrap: break-word;'>" + r.msg[0].add + "</p></p>" +
                     "</div>" +
                     "</div>");
                     if (r.msg[0].agent == 1) {
@@ -112,14 +112,14 @@
                         "<div class='hidden'>" + r.msg[i].city + "</div>" +
                         "<div class='col-lg-5 col-lg-offset-1'><img style='width: 100%' src='../.." + r.msg[i].img + "'>" +
                         "</div>" +
-                        "<div class='col-lg-5  contact' style='padding-left: 50px;margin-top: 30px'><p><span>电话：</span>" + r.msg[i].tel + "</p><p><span>传真：</span>" + r.msg[i].fax + "</p><p><span>邮箱：</span>" + r.msg[i].email + "</p><p><span>地址：</span>" + r.msg[i].add + "</p>" +
+                        "<div class='col-lg-5  contact' style='padding-left: 50px;margin-top: 30px'><p><span>电话：</span>" + r.msg[i].tel + "</p><p><span>传真：</span>" + r.msg[i].fax + "</p><p><span>邮箱：</span>" + r.msg[i].email + "</p><p><p style='float: left;color: #9b761d;'>地址：</p><p style='style='float: left;width: 70%;word-break: break-all;word-wrap: break-word;'>" + r.msg[i].add + "</p></p>" +
                         "</div>" +
                         "</div>");
                     }
                     $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
                     $('#city_one').append("<div class='row'><div class='col-lg-5 col-lg-offset-1'><img style='width: 100%' src='../.." + r.msg[0].img + "'>" +
                     "</div>" +
-                    "<div class='col-lg-5  contact'style='padding-left: 50px;margin-top: 30px'><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
+                    "<div class='col-lg-5  contact'style='padding-left: 50px;margin-top: 30px'><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><p style='float: left;color: #9b761d;'>地址：</p><p style='style='float: left;width: 70%;word-break: break-all;word-wrap: break-word;'>" + r.msg[0].add + "</p></p>" +
                     "</div>" +
                     "</div>");
                     if (r.msg[0].agent == 1) {
