--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -69,6 +69,31 @@
     #detail div p:hover {
         cursor: pointer;
     }
+
+    .mask{
+        padding: 0 !important;
+        height: 130px;
+        border-radius: 2px;
+        position: absolute !important;
+        width: 100% !important;
+        margin-left: 0 !important;
+        z-index: 3;
+        background-color: #000000;
+        opacity:0.5;-webkit-opacity:0.5;
+        display: none;
+    }
+
+    #detail div p{
+        width: 100%;
+        margin: 50px auto;
+        font-family: "Microsoft YaHei";
+        font-size: 16px;
+        position: absolute;
+        z-index: 6;
+        text-align: center;
+        color: #FFFFFF !important;
+        display: none;
+    }
 </style>
 <script>
     $(function() {
@@ -211,13 +236,23 @@
             success: function(r) {
                 var len = r.msg.length;
                 for (var i = 0; i < len; i++) {
-                    $('#detail').append("<div onclick='detail(this)'>" +
+                    $('#detail').append("<div onclick='detail(this)' onmouseover='show(this)' onmouseout='hide(this)'><div class='mask'></div><p>"+r.msg[i].company+"</p>" +
                         "<img style='width: 100%' src='../.." + r.msg[i].img + "' > <p style='font-size:18px;'><span style='display: none'>" + r.msg[i].id + "</span></p></div>");
                 }
                 var height = $(document.body).height();
                 $('#mask').height(height);
             }
         });
+    }
+
+    function show(id){
+        $(id).children().first().css('display','block');
+        $(id).children().first().next().css('display','block');
+    }
+
+    function hide(id){
+        $(id).children().first().css('display','none');
+        $(id).children().first().next().css('display','none');
     }
 
     function detail(id) {
@@ -276,7 +311,7 @@
                 $('#detail').empty();
                 var len = r.msg.length;
                 for (var i = 0; i < len; i++) {
-                    $('#detail').append("<div onclick='detail(this)'>" +
+                    $('#detail').append("<div onclick='detail(this)' onmouseover='show(this)' onmouseout='hide(this)'><div class='mask'></div><p>"+r.msg[i].company+"</p>" +
                         "<img style='width: 100%' src='../.." + r.msg[i].img + "'><p onclick='detail(this)'><span style='display: none'>" + r.msg[i].id + "</span></p></div>");
                 }
                 var height = $(document.body).height();
