--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -15,7 +15,7 @@
     }
 
     ul li a {
-        color:  #4c4c4c;
+        color: #4c4c4c;
         font-size: 16px;
         font-family: "Microsoft YaHei";
     }
@@ -24,10 +24,13 @@
         color: #9b761d
     }
 
-    #top div a{
+    #top div a {
         font-family: "Microsoft YaHei";
-        text-decoration: none;font-size:12px;color: #000;
+        text-decoration: none;
+        font-size: 12px;
+        color: #000;
     }
+
     #search {
         display: block;
         width: 30px;
@@ -51,15 +54,28 @@
         font-size: 12px;
     }
 
-    #bottom{
+    #bottom {
         font-size: 12px;
         font-family: "Microsoft YaHei";
     }
 
+    #bottom1 {
+        font-size: 12px;
+        font-family: "Microsoft YaHei";
+    }
+
+    #foot1{
+        display: none;
+    }
 </style>
 <script>
     $(function () {
         var width = $(document).width();
+        var height = $(document).height();
+        if (height < 1000) {
+             $('#foot').css('display','none');
+            $('#foot1').css('display','block');
+        }
         if (width > 1800) {
             $('#news_img div').height('350px');
             $('#news_img div img').height('350px');
@@ -68,8 +84,8 @@
         if (aQuery.indexOf("news") > 0) {
             $("#news").css('color', '#9b761d');
         }
-        if(aQuery.indexOf("status")>0){
-            $('#img img').attr('src','/Public/home/images/news_en.jpg');
+        if (aQuery.indexOf("status") > 0) {
+            $('#img img').attr('src', '/Public/home/images/news_en.jpg');
             $('#more').text('More');
             $('#ups').text('Up');
             $('#bottom').empty();
@@ -85,8 +101,8 @@
             $.ajax({
                 "url": '/home/index/news',
                 "dataType": 'json',
-                "data":{
-                    "status":1
+                "data": {
+                    "status": 1
                 },
                 success: function (r) {
                     var len = r.msg.length;
@@ -98,7 +114,7 @@
                     }
                 }
             });
-        }else{
+        } else {
             $.ajax({
                 "url": '/home/index/news',
                 "dataType": 'json',
@@ -113,7 +129,7 @@
                 }
             });
         }
-        $('#form').submit(function(){
+        $('#form').submit(function () {
             search();
             return false;
         });
@@ -122,7 +138,7 @@
         });
     });
 
-    function search(){
+    function search() {
         $('#news_list').empty();
         var name = $('input[name=name]').val();
         $.ajax({
@@ -143,35 +159,56 @@
         });
     }
 
-   function show(){
-       $('#show').css('display','none');
-       $('#news_list').css('overflow-y','scroll');
-       $('#up').css('display','block');
-   }
-   function up(){
-       $('#up').css('display','none');
-       $('#news_list').css('overflow-y','hidden');
-       $('#show').css('display','block');
-   }
-    function home(){
+    function show() {
+        $('#show').css('display', 'none');
+        $('#news_list').css('overflow-y', 'scroll');
+        $('#up').css('display', 'block');
+    }
+    function up() {
+        $('#up').css('display', 'none');
+        $('#news_list').css('overflow-y', 'hidden');
+        $('#show').css('display', 'block');
+    }
+    function home() {
         var aQuery = window.location.href;  //取得Get参数
-        if(aQuery.indexOf("status")>0){
-            window.location.href='index.html?status=1';
-        }else{
-            window.location.href='index.html';
+        if (aQuery.indexOf("status") > 0) {
+            window.location.href = 'index.html?status=1';
+        } else {
+            window.location.href = 'index.html';
         }
     }
 </script>
 <style>
-    .title{font-family: "Microsoft YaHei"; color: #4c4c4c; font-size: 18px; font-weight: 600 !important;}
-    #news_list{max-height: 1000px; overflow-y: hidden;}
-    #show,#up:hover{cursor: pointer}
-    .content{margin-top: -5px; font-family: "Microsoft YaHei"; font-size: 14px; color: #7c7c7c}
-    #log:hover{
+    .title {
+        font-family: "Microsoft YaHei";
+        color: #4c4c4c;
+        font-size: 18px;
+        font-weight: 600 !important;
+    }
+
+    #news_list {
+        max-height: 1000px;
+        overflow-y: hidden;
+    }
+
+    #show, #up:hover {
+        cursor: pointer
+    }
+
+    .content {
+        margin-top: -5px;
+        font-family: "Microsoft YaHei";
+        font-size: 14px;
+        color: #7c7c7c
+    }
+
+    #log:hover {
         cursor: pointer;
     }
+
     .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9 {
-        float: left; position: relative;
+        float: left;
+        position: relative;
     }
 
     .col-lg-12 {
@@ -277,7 +314,8 @@
             <img id="log" onclick="home()" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-8 " id="top">
-            <div style="text-align: right"><a href="news.html"style="color: #9b761d">中文</a>&nbsp;|&nbsp;<a href="news.html?status=1">English</a>
+            <div style="text-align: right"><a href="news.html" style="color: #9b761d">中文</a>&nbsp;|&nbsp;<a
+                    href="news.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
@@ -301,7 +339,7 @@
         </div>
         <div class="col-lg-3 col-lg-offset-4" style="margin-top: 80px;">
             <form id="form">
-                <input type="text" name="name"  class="form-control">
+                <input type="text" name="name" class="form-control">
                 <span id="search" class="glyphicon glyphicon-search" style="font-size: 20px;color: #AAA"></span>
             </form>
         </div>
@@ -312,19 +350,31 @@
 
     </div>
     <div class="row">
-        <div id="show" onclick="show()" class="col-lg-10 col-lg-offset-1" style="text-align: center; display:block;color: #999">
+        <div id="show" onclick="show()" class="col-lg-10 col-lg-offset-1"
+             style="text-align: center; display:block;color: #999">
             ——&nbsp;&nbsp;<span id="more">查看更多</span>&nbsp;&nbsp;——
         </div>
-        <div id="up" onclick="up()" class="col-lg-10 col-lg-offset-1" style="text-align: center;display:none;color: #999">
+        <div id="up" onclick="up()" class="col-lg-10 col-lg-offset-1"
+             style="text-align: center;display:none;color: #999">
             ——&nbsp;&nbsp;<span id="ups">收起</span>&nbsp;&nbsp;——
         </div>
     </div>
 </div>
-<div class="container" style="margin-top: 50px;width:100%;background-color: #525c75">
+<div class="container" id="foot" style="margin-top: 50px;width:100%;background-color: #525c75;">
     <div class="row" id="bottom">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
-            <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
+            <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+                href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
+        </div>
+    </div>
+</div>
+<div class="container" id="foot1" style="margin-top: 50px;width:100%;background-color: #525c75;position: fixed;bottom: 0;">
+    <div class="row" id="bottom1">
+        <div class="col-lg-12"
+             style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
+            <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+                href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
 </div>
