--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -37,6 +37,15 @@
         font-family: "Microsoft YaHei";
     }
 
+    #bottom1 {
+        font-size: 12px;
+        font-family: "Microsoft YaHei";
+    }
+
+    #foot1{
+        display: none;
+    }
+
     #detail {
         padding: 0;
         padding-left: 30px;
@@ -53,9 +62,8 @@
 
     #detail div img {
         height: 130px;
-        border: 1px #cfcfcf solid;
         border-radius: 2px;
-        box-shadow: 0px 1px 3px #ccc;
+        box-shadow: 0px 3px 6px #999;
     }
 
     #detail div p {
@@ -78,8 +86,8 @@
         width: 100% !important;
         margin-left: 0 !important;
         z-index: 3;
-        background-color: #000000;
-        opacity:0.5;-webkit-opacity:0.5;
+        background-color: #525c75;
+        opacity:0.8;-webkit-opacity:0.8;
         display: none;
     }
 
@@ -216,7 +224,34 @@
                 var len = r.msg.length;
                 for (var i = 0; i < len; i++) {
                     if (status == 1) {
-                        $('#area_two').append("<div class='menu_right' onclick='search(this)' style='width: 180px;'><span>" + r.msg[i].area + "</span></div>");
+                        var area;
+                        switch(r.msg[i].area){
+                            case '中国':
+                                area='China';
+                                break;
+                            case '美国':
+                                area='America';
+                                break;
+                            case '日本':
+                                area='Japan';
+                                break;
+                            case '英国':
+                                area='England';
+                                break;
+                            case '法国':
+                                area='France';
+                                break;
+                            case '澳大利亚':
+                                area='Australia';
+                                break;
+                            case '韩国':
+                                area='Korea';
+                                break;
+                            case '德国':
+                                area='Germany';
+                                break;
+                        }
+                        $('#area_two').append("<div class='menu_right' onclick='search(this)' style='width: 180px;'><span>" + r.msg[i].area + "</span><br><span style='font-size: 12px'>"+area+"</span></div>");
                     } else {
                         $('#area_two_en').append("<div class='menu_right' onclick='search(this)' style='width: 180px;'><span>" + r.msg[i].area + "</span></div>");
                     }
@@ -241,6 +276,10 @@
                 }
                 var height = $(document.body).height();
                 $('#mask').height(height);
+                if (height < 1000) {
+                    $('#foot').css('display','none');
+                    $('#foot1').css('display','block');
+                }
             }
         });
     }
@@ -316,6 +355,10 @@
                 }
                 var height = $(document.body).height();
                 $('#mask').height(height);
+                if (height < 1000) {
+                    $('#foot').css('display','none');
+                    $('#foot1').css('display','block');
+                }
             }
         });
     }
@@ -605,6 +648,7 @@
 
     pre {
         text-align: left;
+        font-size: 14px;
     }
 
     #en {
@@ -644,25 +688,25 @@
 
                 <div class='menu menu_cn' id="industry" onclick="index(0)" style='width: 180px;'>
                     <span>按行业</span>
-                    <!--<br><span style='font-size: 12px'>Industry</span>-->
+                    <br><span style='font-size: 12px'>Industry</span>
                 </div>
                 <div id="industry_two" style="display: none">
                     <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                         <span>医疗</span>
-                        <!--<br><span style='font-size: 12px'>Medical care</span>-->
+                        <br><span style='font-size: 12px'>Medical care</span>
                     </div>
                     <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                         <span>消费</span>
-                        <!--<br><span style='font-size: 12px'>Consumption</span>-->
+                        <br><span style='font-size: 12px'>Consumption</span>
                     </div>
                     <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                         <span>高新技术</span>
-                        <!--<br><span style='font-size: 12px'>Hign technology</span>-->
+                        <br><span style='font-size: 12px'>Hign technology</span>
                     </div>
                 </div>
                 <div class='menu menu_cn' id="area" onclick="index(0)" style='width: 180px;'>
                     <span>按地域</span>
-                    <!--<br><span style='font-size: 12px'>Area</span>-->
+                    <br><span style='font-size: 12px'>Area</span>
                 </div>
                 <div id="area_two" style="display: none">
                     <!--<div class="menu_right" onclick="search(this)" style='width: 180px;'>
@@ -676,20 +720,20 @@
                 </div>
                 <div class='menu menu_cn' id="stage" onclick="index(0)" style='width: 180px;'>
                     <span>按阶段</span>
-                    <!--<br><span style='font-size: 12px'>Stage</span>-->
+                    <br><span style='font-size: 12px'>Stage</span>
                 </div>
                 <div id="stage_two" style="display: none">
                     <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                         <span>早期</span>
-                        <!--<br><span style='font-size: 12px'>Early stage</span>-->
+                        <br><span style='font-size: 12px'>Early stage</span>
                     </div>
                     <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                         <span>成长早期</span>
-                        <!--<br><span style='font-size: 12px'>Early growth</span>-->
+                        <br><span style='font-size: 12px'>Early growth</span>
                     </div>
                     <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                         <span>成长期</span>
-                        <!--<br><span style='font-size: 12px'>Growth</span>-->
+                        <br><span style='font-size: 12px'>Growth</span>
                     </div>
                 </div>
                 <div class='menu menu_en' id="industry_en" onclick="index(1)" style='width: 180px;'>
@@ -747,39 +791,48 @@
                 </div>
                 <div class="col-lg-6" style="padding: 0;margin-top:10px;height:310px;overflow: auto;width: 47.4% !important;  ">
                     <div style="padding: 0;width: 100%" id="ch">
-                        <div class="col-lg-12" style="font-size: 16px;">投资阶段：<span id="invest_stage"></span></div>
-                        <div class="col-lg-11" style="font-size: 16px;">投资时间：<span id="invest_time"></span></div>
-                        <div class="col-lg-11 exit" style="font-size: 16px;">退出时间：<span id="invest_exit_time"></span></div>
-                        <div class="col-lg-11 exit" style="font-size: 16px;">退出方式：<span id="invest_exit_way"></span></div>
-                        <div class="col-lg-11 exit" style="font-size: 16px;">投资收益：<span id="invest_reward"></span></div>
-                        <div class="col-lg-11 exit addr" style="font-size: 16px;">上市地点：<span id="invest_addr"></span></div>
-                        <div class="col-lg-11 exit up_stock" style="font-size: 16px;">上市股票：<span id="up_stock"></span></div>
-                        <div class="col-lg-11" style="font-size: 16px;">公司网站：
+                        <div class="col-lg-12" style="font-size: 14px;">投资阶段：<span id="invest_stage"></span></div>
+                        <div class="col-lg-11" style="font-size: 14px;">投资时间：<span id="invest_time"></span></div>
+                        <div class="col-lg-11 exit" style="font-size: 14px;">退出时间：<span id="invest_exit_time"></span></div>
+                        <div class="col-lg-11 exit" style="font-size: 14px;">退出方式：<span id="invest_exit_way"></span></div>
+                        <div class="col-lg-11 exit" style="font-size: 14px;">投资收益：<span id="invest_reward"></span></div>
+                        <div class="col-lg-11 exit addr" style="font-size: 14px;">上市地点：<span id="invest_addr"></span></div>
+                        <div class="col-lg-11 exit up_stock" style="font-size: 14px;">上市股票：<span id="up_stock"></span></div>
+                        <div class="col-lg-11" style="font-size: 14px;">公司网站：
                             <a href="" id="invest_web"></a>
                         </div>
-                        <div class="col-lg-11" id="invest_intro" style="font-size: 16px;padding-top: 30px;"></div>
+                        <div class="col-lg-11" id="invest_intro" style="font-size: 14px;padding-top: 30px;"></div>
                     </div>
                     <div style="padding: 0;width: 100%" id="en">
-                        <div class="col-lg-12" style="font-size: 16px;">Investment Staged：<span id="invest_stage_en"></span></div>
-                        <div class="col-lg-11" style="font-size: 16px;">investment Time：<span id="invest_time_en"></span></div>
-                        <div class="col-lg-11 exit" style="font-size: 16px;">Exit Time：<span id="invest_exit_time_en"></span></div>
-                        <div class="col-lg-11 exit" style="font-size: 16px;">Exit Way：<span id="invest_exit_way_en"></span></div>
-                        <div class="col-lg-11 exit" style="font-size: 16px;">Investment Return：<span id="invest_reward_en"></span></div>
-                        <div class="col-lg-11 exit addr" style="font-size: 16px;">Listing Location：<span id="invest_addr_en"></span></div>
-                        <div class="col-lg-11 exit up_stock" style="font-size: 16px;">Lised Stocks：<span id="up_stock_en"></span></div>
-                        <div class="col-lg-11" style="font-size: 16px;">Company Web：
+                        <div class="col-lg-12" style="font-size: 14px;">Investment Staged：<span id="invest_stage_en"></span></div>
+                        <div class="col-lg-11" style="font-size: 14px;">investment Time：<span id="invest_time_en"></span></div>
+                        <div class="col-lg-11 exit" style="font-size: 14px;">Exit Time：<span id="invest_exit_time_en"></span></div>
+                        <div class="col-lg-11 exit" style="font-size: 14px;">Exit Way：<span id="invest_exit_way_en"></span></div>
+                        <div class="col-lg-11 exit" style="font-size: 14px;">Investment Return：<span id="invest_reward_en"></span></div>
+                        <div class="col-lg-11 exit addr" style="font-size: 14px;">Listing Location：<span id="invest_addr_en"></span></div>
+                        <div class="col-lg-11 exit up_stock" style="font-size: 14px;">Lised Stocks：<span id="up_stock_en"></span></div>
+                        <div class="col-lg-11" style="font-size: 14px;">Company Web：
                             <a href="" id="invest_web_en"></a>
                         </div>
-                        <div class="col-lg-11 invest_en" id="invest_intro_en" style="font-size: 16px;padding-top: 30px;"></div>
+                        <div class="col-lg-11 invest_en" id="invest_intro_en" style="font-size: 14px;padding-top: 30px;"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container" style="margin-top: 50px;width:100%;background-color: #525c75">
+    <div class="container" id="foot" style="margin-top: 50px;width:100%;background-color: #525c75">
         <div class="row" id="bottom" style="">
             <div class="col-lg-12" style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
                 <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
+            </div>
+        </div>
+    </div>
+    <div class="container" id="foot1" style="margin-top: 50px;width:100%;background-color: #525c75;position: fixed;bottom: 0;">
+        <div class="row" id="bottom1">
+            <div class="col-lg-12"
+                 style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
+                <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+                    href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
             </div>
         </div>
     </div>
