--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -250,6 +250,9 @@
                             case '德国':
                                 area='Germany';
                                 break;
+                            case '香港':
+                                area='Hong Kong';
+                                break;
                         }
                         $('#area_two').append("<div class='menu_right' onclick='search(this)' style='width: 180px;'><span>" + r.msg[i].area + "</span><br><span style='font-size: 12px'>"+area+"</span></div>");
                     } else {
