--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -209,9 +209,9 @@
                     for (var i = 0; i < len; i++) {
                         $('#imgs').append("<div class='col-lg-4' onmouseover='show(this)' onmouseout='hide(this)' onclick='detail(this)' style='padding:0;width:280px !important;margin-top: 10px;text-align:center;height: 200px'>" +
                         "<div class='new'><p style='display: none'>" + r.msg[i].id + "</p>" +
-                        "<p style='margin-top: 80px;' id='name'>" + r.msg[i].name + "</p>" +
-                        "<p id='english'>" + r.msg[i].english + "</p><p id='hr' style='width: 20% !important;margin-left: 40%'></p>" +
-                        "<p id='position'>" + r.msg[i].position + "</p></div>" +
+                        "<p style='margin-top: 80px;' id='name'>" + r.msg[i].english + "</p>" +
+                        "<p id='hr' style='width: 20% !important;margin-left: 40%'></p>" +
+                        "<p id='position'>" + r.msg[i].position_en + "</p></div>" +
                         "<img src='../.." + r.msg[i].img + "' style='width:95%;height:200px;'></div>");
                     }
                     var height = $(document.body).height();
@@ -302,13 +302,16 @@
                 var aQuery = window.location.href;  //取得Get参数
                 if (aQuery.indexOf("status") > 0) {
                     var intro = '<pre>' + r.msg.intro_en + '</pre>';
+                    $('#name').text(r.msg.english);
+                    $('#en_name').empty();
+                    $('#position').text(r.msg.position_en);
                 }else{
                     var intro = '<pre>' + r.msg.intro + '</pre>';
+                    $('#name').text(r.msg.name);
+                    $('#en_name').text(r.msg.english);
+                    $('#position').text(r.msg.position);
                 }
                 $('#member_img').attr('src', '../..' + r.msg.img);
-                $('#name').text(r.msg.name);
-                $('#en_name').text(r.msg.english);
-                $('#position').text(r.msg.position);
                 $('#intro').html(intro);
             }
         });
