--- a/Public/admin/index.html
+++ b/Public/admin/index.html
@@ -158,7 +158,7 @@
     }
 
 </style>
-<body>
+<body style="background-color: #FFFFFF !important;">
 <div class="site-holder">
     <nav class="navbar" role="navigation">
         <div class="navbar-header">
