--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -37,15 +37,6 @@
         font-family: "Microsoft YaHei";
     }
 
-    #bottom1 {
-        font-size: 12px;
-        font-family: "Microsoft YaHei";
-    }
-
-    #foot1{
-        display: none;
-    }
-
     #detail {
         padding: 0;
         padding-left: 30px;
@@ -823,21 +814,15 @@
             </div>
         </div>
     </div>
-    <div class="container" id="foot" style="margin-top: 50px;width:100%;background-color: #525c75">
+    <div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;position: fixed;bottom: 0;">
         <div class="row" id="bottom" style="">
             <div class="col-lg-12" style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
                 <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
             </div>
         </div>
     </div>
-    <div class="container" id="foot1" style="margin-top: 50px;width:100%;background-color: #525c75;position: fixed;bottom: 0;">
-        <div class="row" id="bottom1">
-            <div class="col-lg-12"
-                 style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
-                <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a
-                    href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
-            </div>
-        </div>
+    <div class="container" style="margin-top: 50px;width:100%;height: 50px;">
+
     </div>
 </body>
 
