--- a/Public/home/law.html
+++ b/Public/home/law.html
@@ -215,13 +215,16 @@
         </div>
     </div>
 </div>
-<div class="container" style="margin-top: 50px;width:100%;background-color: #525c75">
+<div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;position: fixed;bottom: 0;">
     <div class="row" id="bottom">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
             <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
+</div>
+<div class="container" style="margin-top: 50px;width:100%;height: 50px;">
+
 </div>
 </body>
 </html>
