--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -329,7 +329,7 @@
         </div>
     </div>
 </div>
-<div class="container" style="margin-top: 50px;width:100%;background-color: #525c75">
+<div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;position: fixed;bottom: 0;">
     <div class="row" id="bottom">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
@@ -337,6 +337,9 @@
                                                                          style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
+</div>
+<div class="container" style="margin-top: 50px;width:100%;height: 50px;">
+
 </div>
 </body>
 </html>
