--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -96,19 +96,6 @@
 </style>
 <script>
     $(function() {
-        var width = $(document).width();
-        if (width > 1800) {
-            $('#case_img div').height('350px');
-            $('#case_img div img').height('350px');
-        }
-        if (width > 1600) {
-            $('#invest').width('900px');
-            $('#invest').css('margin-left','3.33333333%');
-        }
-        if (width > 2000) {
-            $('#invest').width('900px');
-            $('#invest').css('margin-left','12%');
-        }
         var aQuery = window.location.href; //取得Get参数
         if (aQuery.indexOf("case") > 0) {
             $("#case").css('color', '#9b761d');
@@ -597,12 +584,15 @@
     #invest {
         position: fixed;
         z-index: 4;
-        width: 60%;
-        top: 20%;
-        left: 20%;
+        width: 850px;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
         background-color: #FFFFFF;
         border-radius: 3px;
-        height: 430px;
+        height: 450px;
         display: none;
     }
 
