--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -258,7 +258,7 @@
                 }
                 var height = $(document.body).height();
                 if (len < 7) {
-                    height = height + 200;
+                    height = height + 300;
                 }
                 $('#mask').height(height);
             }
@@ -335,6 +335,9 @@
                     "<img style='width: 100%' src='../.." + r.msg[i].img + "'><p onclick='detail(this)'><span style='display: none'>" + r.msg[i].id + "</span></p></div>");
                 }
                 var height = $(document.body).height();
+                if (len < 7) {
+                    height = height + 300;
+                }
                 $('#mask').height(height);
             }
         });
@@ -625,8 +628,7 @@
         background-color: #b0a065;
     }
 
-    .addr,
-    .up_stock {
+    .addr, .up_stock {
         display: none;
     }
 
