--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -799,7 +799,7 @@
                     <div class="col-lg-11" style="font-size: 14px;">公司网站：
                         <a href="" id="invest_web"></a>
                     </div>
-                    <div class="col-lg-11" id="invest_intro" style="font-size: 14px;padding-top: 30px;"></div>
+                    <div class="col-lg-11" id="invest_intro" style="font-size: 14px;line-height: 2;padding-top: 30px;"></div>
                 </div>
                 <div style="padding: 0;width: 100%" id="en">
                     <div class="col-lg-12" style="font-size: 14px;">Investment Staged：<span id="invest_stage_en"></span>
@@ -820,7 +820,7 @@
                         <a href="" id="invest_web_en"></a>
                     </div>
                     <div class="col-lg-11 invest_en" id="invest_intro_en"
-                         style="font-size: 14px;padding-top: 30px;"></div>
+                         style="font-size: 14px;line-height: 2;padding-top: 30px;"></div>
                 </div>
             </div>
         </div>
