--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -632,6 +632,7 @@
         background-color: #b0a065;
     }
 
+
     .addr, .up_stock {
         display: none;
     }
@@ -786,9 +787,8 @@
                 <img id="invest_img"
                      style="margin: -10px auto; width: 290px;height:220px;box-shadow: 0px 3px 6px #999;"/>
             </div>
-            <div class="col-lg-6"
-                 style="padding: 0;margin-top:10px;height:310px;overflow: auto;width: 47.4% !important;  ">
-                <div style="padding: 0;width: 100%" id="ch">
+            <div class="col-lg-6" id="scroll" style="padding: 0;margin-top:10px;height:310px;overflow-y: auto;width: 47.4% !important;">
+                <div style="padding: 0;width: 100%;" id="ch">
                     <div class="col-lg-12" style="font-size: 14px;">投资阶段：<span id="invest_stage"></span></div>
                     <div class="col-lg-11" style="font-size: 14px;">投资时间：<span id="invest_time"></span></div>
                     <div class="col-lg-11 exit" style="font-size: 14px;">退出时间：<span id="invest_exit_time"></span></div>
