--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -253,7 +253,7 @@
             success: function (r) {
                 var len = r.msg.length;
                 for (var i = 0; i < len; i++) {
-                    $('#detail').append("<div onclick='detail(this)' onmouseover='show(this)' onmouseout='hide(this)'><div class='mask'></div><p>" + r.msg[i].company + "</p>" +
+                    $('#detail').append("<div onclick='detail(this)' onmouseover='show(this)' onmouseout='hide(this)' style='padding-bottom: 10px;'><div class='mask'></div><p>" + r.msg[i].company + "</p>" +
                     "<img style='width: 100%' src='../.." + r.msg[i].img + "' > <p style='font-size:18px;'><span style='display: none'>" + r.msg[i].id + "</span></p></div>");
                 }
                 var height = $(document.body).height();
