--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -326,13 +326,13 @@
                             <a class="btn btn-success" style="float: left"
                                onclick="$('input[id=lefile]').click();">上传</a>
                         </div>
-                        <label for="show" class="col-sm-1 control-label">版式</label>
+                        <!--<label for="show" class="col-sm-1 control-label">版式</label>
                         <div class="col-sm-2">
                             <select class="form-control" id="zn_en">
                                 <option>中文</option>
                                 <option>英文</option>
                             </select>
-                        </div>
+                        </div>-->
                         <label for="show" class="col-sm-1 control-label">展示</label>
                         <div class="col-sm-2">
                             <select class="form-control" id="show" name="show">
