--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -366,7 +366,7 @@
                                     <th class="visible-lg" style="width: 9%">姓名</th>
                                     <th class="visible-lg" style="width: 9%">英文名</th>
                                     <th class="visible-lg" style="width: 9%">职位</th>
-                                    <th class="visible-lg" style="width: 11%">时间</th>
+                                    <th class="visible-lg" style="width: 11%">职位(英文)</th>
                                     <th class="visible-lg" style="width: 6%">展示</th>
                                     <th class="visible-lg" style="width: 22%">简介</th>
                                     <th class="visible-lg" style="width: 14%">操作</th>
