--- a/Public/home/abort.html
+++ b/Public/home/abort.html
@@ -53,8 +53,8 @@
             $('#menu img').click(function(){
                 window.location.href='abort.html?status=1';
             });
-            $('#title').text('Maision');
-            $('#hr').css('display','block');
+            $('#title').css('display','none');
+            $('#hr').css('display','none');
             $('#contents').css('display','none');
             $('#bottom').empty();
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
