--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -151,6 +151,7 @@
         border: 0;
         font-size: 14px;
         text-align: left;
+        line-height: 25px;
         font-family: 'Microsoft YaHei', sans-serif
     }
 
