--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -679,7 +679,7 @@
 
             <div class='menu menu_cn' id="industry" onclick="index(0)" style='width: 180px;'>
                 <span>按行业</span>
-                <br><span style='font-size: 12px'>Industry</span>
+                <br><span style='font-size: 12px'>By sectors</span>
             </div>
             <div id="industry_two" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
@@ -697,7 +697,7 @@
             </div>
             <div class='menu menu_cn' id="area" onclick="index(0)" style='width: 180px;'>
                 <span>按地域</span>
-                <br><span style='font-size: 12px'>Area</span>
+                <br><span style='font-size: 12px'>By regions</span>
             </div>
             <div id="area_two" style="display: none">
                 <!--<div class="menu_right" onclick="search(this)" style='width: 180px;'>
@@ -711,7 +711,7 @@
             </div>
             <div class='menu menu_cn' id="stage" onclick="index(0)" style='width: 180px;'>
                 <span>按阶段</span>
-                <br><span style='font-size: 12px'>Stage</span>
+                <br><span style='font-size: 12px'>By stages</span>
             </div>
             <div id="stage_two" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
@@ -797,6 +797,7 @@
                         <a href="" id="invest_web"></a>
                     </div>
                     <div class="col-lg-11" id="invest_intro" style="font-size: 14px;line-height: 2;padding-top: 30px;"></div>
+                    <div style="height: 10px;" class="col-lg-11"></div>
                 </div>
                 <div style="padding: 0;width: 100%" id="en">
                     <div class="col-lg-12" style="font-size: 14px;">Investment Staged：<span id="invest_stage_en"></span>
@@ -818,6 +819,7 @@
                     </div>
                     <div class="col-lg-11 invest_en" id="invest_intro_en"
                          style="font-size: 14px;line-height: 2;padding-top: 30px;"></div>
+                    <div style="height: 10px;" class="col-lg-11"></div>
                 </div>
             </div>
         </div>
